# agent-memory-layer

./: .gitattributes  .gitignore  ADOPTION_DRILL.md  AGENTS.md  AGENT_BOOTSTRAP.md  AGENT_GUIDE.md  ARTIFACT_MODEL.md  AUTOMATION_ARCHITECTURE.md  CI_AND_HOOKS.md  CLAUDE.md  CONTRIBUTING.md  EVENT_MODEL.md  EVIDENCE.md  EXAMPLES.md  GEMINI.md  MANIFESTO.md  README.md  README_POSITIONING_UPDATE_REPORT.md  RELEASE_SUMMARY.md  ROADMAP.md  SCP_BUILD_REPORT.md  SCP_INIT_REPORT.md  WORKFLOW.md  pyproject.toml  pytest.ini
.cursor/rules/: engineering-knowledge-workflow.mdc
.github/workflows/: knowledge-artifacts.yml
artifacts/knowledge/: guardrail_summary.json  guardrail_summary.md  intent_draft.md  intent_draft.yaml
automation/: README.md  intent_bootstrap.py  scp_draft.py
benchmarks/codex_context_memory/: .gitignore  BENCHMARK_RESULTS.md  EVIDENCE_DIGEST.md  README.md  REPORT_TEMPLATE.md  RERUN_REPORT.md  SCORING.md  tasks.json
docs/: SCP_CANON.md  SCP_SCHEMA.md
docs/evidence/: SCP_CONSUMPTION_TEST_REPORT.md  (+1 more)
src/ds2/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  helpers.py  test_ab_adoption_experiment.py  test_agent_instruction_files.py  test_catalog.py  test_cli_scan_fixture.py  test_event_classifier.py  test_exposure_classifier.py  test_fastapi_golden_outputs.py  test_guardrail_runner.py  test_import_scanner.py  test_intent_bootstrap.py  test_invariants.py  test_mindfreak.py  test_mindfreak_stress.py  test_pyproject_collector.py  test_report_determinism.py  test_requirements_collector.py  test_scp.py  test_scp_cli.py  test_scp_draft.py  test_timed_run.py
(+282 files in other folders)
